# wikidata_synthetic_data_generator

./: .gitignore  Cargo.toml  README.md
data/: README.md  convert_to_csv.py  convert_to_parquet.py  example.env  extract_aliases.py  extract_aliases_nl.py  wikidata-en-properties.csv  wikidata-en-properties.json  wikidata-nl-properties.csv  wikidata-nl-properties.json
src/: batched_writer.rs  config.rs  csv_writer_pool.rs  entity_resolver.rs  main.rs  processing_error.rs  utils.rs
