[package]
name = "wikidata_synthetic_data_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
dashmap = "6.1.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = "full"
